@@ -69,6 +69,7 @@ import org.vrjuggler.jccl.config.*;
                                   "person",
                                   "",
                                   1,
+                                  false,
                                   parents,
                                   "A person",
                                   categories,
@@ -106,6 +107,7 @@ import org.vrjuggler.jccl.config.*;
                                   "wall",
                                   "",
                                   1,
+                                  false,
                                   parents,
                                   "A wall in 3D space.",
                                   categories,
@@ -139,6 +141,7 @@ import org.vrjuggler.jccl.config.*;
                                   "corner",
                                   "",
                                   1,
+                                  false,
                                   parents,
                                   "A corner of a wall in 3D space.",
                                   categories,
